--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
@@ -59,7 +59,7 @@
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "drizzle-kit": "^0.26.2",
-    "eslint": "^8.57.1",
+    "eslint": "^9",
     "eslint-config-next": "15.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
