--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.0.1",
     "postcss": "^8.5.6",
+    "shadcn": "^3.6.2",
     "tailwindcss": "^3.4.18",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
