--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@hookform/resolvers": "^3.10.0",
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
-    "@next/mdx": "^15.5.7",
+    "@next/mdx": "^16.1.1",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -31,6 +31,7 @@
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "@vercel/postgres": "^0.10.0",
+    "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -40,13 +41,13 @@
     "drizzle-zod": "^0.5.1",
     "eslint-plugin-drizzle": "^0.2.3",
     "lucide-react": "^0.453.0",
-    "next": "15.5.9",
+    "next": "16.1.1",
     "next-auth": "5.0.0-beta.25",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
+    "react": "^19.0.0",
     "react-day-picker": "8.10.1",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.68.0",
     "recharts": "^3.6.0",
     "sonner": "^1.7.4",
@@ -55,14 +56,17 @@
     "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@neondatabase/serverless": "^0.9.3",
     "@tailwindcss/typography": "^0.5.19",
     "@types/node": "^20.19.25",
     "@types/nodemailer": "^6.4.21",
+    "@types/pg": "^8.16.0",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "drizzle-kit": "^0.26.2",
     "eslint": "^9",
-    "eslint-config-next": "15.0.1",
+    "eslint-config-next": "16.1.1",
+    "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "shadcn": "^3.6.2",
     "tailwindcss": "^3.4.18",
