Refactor: Update Tailwind configuration and improve component styles
- Removed the Tailwind configuration file and adjusted the PostCSS setup to use the new plugin format.
- Updated various components to enhance styling consistency, including adjustments to icon sizes and layout properties.
- Upgraded dependencies in package.json for improved performance and compatibility, including updates to React and Tailwind CSS.
- Enhanced global styles and component structures for better responsiveness and user experience.

--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3",
-    "lucide-react": "^0.453.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.1",
-    "react": "^19.0.0",
-    "react-day-picker": "8.10.1",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.3",
+    "react-day-picker": "9.13.0",
+    "react-dom": "^19.2.3",
     "react-hook-form": "^7.68.0",
     "sonner": "^1.7.4",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^4.3.5"
   },
@@ -48,13 +48,14 @@
     "@mdx-js/loader": "^3.1.1",
     "@mdx-js/react": "^3.1.1",
     "@next/mdx": "^16.1.1",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/typography": "^0.5.19",
     "@types/mdx": "^2.0.13",
     "@types/node": "^20.19.25",
     "@types/nodemailer": "^6.4.21",
     "@types/pg": "^8.16.0",
-    "@types/react": "^18.3.27",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "dotenv": "^16.6.1",
@@ -65,8 +66,9 @@
     "pg": "^8.16.3",
     "postcss": "^8.5.6",
     "shadcn": "^3.6.3",
-    "tailwindcss": "^3.4.18",
+    "tailwindcss": "^4.1.18",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5.9.3"
   },
   "packageManager": "pnpm@10.28.0"
